<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_btn_allNotes"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dip"
            android:text="@string/main_all_notes" />

        <Button
            android:id="@+id/main_btn_newNotes"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dip"
            android:text="@string/main_new_note" />

        <Button
            android:id="@+id/main_btn_sendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/main_btn_send_email" />

        <Button
            android:id="@+id/main_btn_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/main_btn_site" />

        <Button
            android:id="@+id/main_btn_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/main_btn_about" />

        <Button
            android:id="@+id/main_btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/main_btn_exit" />
    </LinearLayout>

</ScrollView>