<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F9F9F9" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/reg_lbl_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reg_lbl_register"
            android:textSize="25dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/reg_lbl_email" />

        <EditText
            android:id="@+id/reg_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/reg_lbl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_lbl_password" />

        <EditText
            android:id="@+id/reg_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reg_lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_lbl_name" />

        <EditText
            android:id="@+id/reg_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/reg_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn_register" />
    </LinearLayout>

</ScrollView>